data/rq2/deepseek/intermediate/zopfli/workspace/final_projects/zopfli/translate_by_qwen3_coder/preprocessed_header.h

typedef long unsigned int size_t;
typedef struct ZopfliOptions {
  int verbose;
  int verbose_more;
  int numiterations;
  int blocksplitting;
  int blocksplittinglast;
  int blocksplittingmax;
} ZopfliOptions;
typedef struct ZopfliLZ77Store {
  unsigned short* litlens;
  unsigned short* dists;
  size_t size;
  const unsigned char* data;
  size_t* pos;
  unsigned short* ll_symbol;
  unsigned short* d_symbol;
  size_t* ll_counts;
  size_t* d_counts;
} ZopfliLZ77Store;
void ZopfliDeflate(const ZopfliOptions* options, int btype, int final,
                   const unsigned char* in, size_t insize,
                   unsigned char* bp, unsigned char** out, size_t* outsize);
void ZopfliDeflatePart(const ZopfliOptions* options, int btype, int final,
                       const unsigned char* in, size_t instart, size_t inend,
                       unsigned char* bp, unsigned char** out,
                       size_t* outsize);
double ZopfliCalculateBlockSize(const ZopfliLZ77Store* lz77,
                                size_t lstart, size_t lend, int btype);
double ZopfliCalculateBlockSizeAutoType(const ZopfliLZ77Store* lz77,
                                        size_t lstart, size_t lend);