data/rq2/deepseek/intermediate/zopfli/workspace/final_projects/zopfli/translate_by_qwen3_coder/.c2r_bindgen_fns/deflate_6c2dbacc.fns.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn ZopfliDeflate(
        options: *const ZopfliOptions,
        btype: ::core::ffi::c_int,
        final_: ::core::ffi::c_int,
        in_: *const ::core::ffi::c_uchar,
        insize: size_t,
        bp: *mut ::core::ffi::c_uchar,
        out: *mut *mut ::core::ffi::c_uchar,
        outsize: *mut size_t,
    );
}
unsafe extern "C" {
    pub fn ZopfliDeflatePart(
        options: *const ZopfliOptions,
        btype: ::core::ffi::c_int,
        final_: ::core::ffi::c_int,
        in_: *const ::core::ffi::c_uchar,
        instart: size_t,
        inend: size_t,
        bp: *mut ::core::ffi::c_uchar,
        out: *mut *mut ::core::ffi::c_uchar,
        outsize: *mut size_t,
    );
}
unsafe extern "C" {
    pub fn ZopfliCalculateBlockSize(
        lz77: *const ZopfliLZ77Store,
        lstart: size_t,
        lend: size_t,
        btype: ::core::ffi::c_int,
    ) -> f64;
}
unsafe extern "C" {
    pub fn ZopfliCalculateBlockSizeAutoType(
        lz77: *const ZopfliLZ77Store,
        lstart: size_t,
        lend: size_t,
    ) -> f64;
}
unsafe extern "C" {
    pub fn OptimizeHuffmanForRle(length: ::core::ffi::c_int, counts: *mut size_t);
}
